--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  
+ "scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+},
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -51,6 +53,7 @@
     "tailwindcss": "^3.3.3"
   }
 }
+
 
 
 
